:sparkles: feat: add validation check and toggle feature fix